Convertir sitio a formato completamente informativo
- Eliminados todos los botones 'Consultar' de las tarjetas de productos

- Removido botón flotante de WhatsApp

- Expandido layout de páginas de detalle (grid 2fr 1fr)

- Mejorados estilos para información de productos:

  * Títulos más grandes y prominentes (3rem)

  * Precios destacados con color de acento (2.5rem)

  * Mejor espaciado en descripciones y especificaciones

  * Separadores visuales con bordes

- Agregados estilos completos para product-specs y product-characteristics

- Sitio ahora es puramente informativo sin elementos comerciales

--- a/.qodo/index.html
+++ b/.qodo/index.html
@@ -105,11 +105,8 @@
                         <div class="producto-price">$45.999</div>
                         <p>Laptop profesional con Intel Core i7, 16GB RAM, 512GB SSD. Ideal para trabajo empresarial exigente.</p>
                         <div class="producto-actions">
-                            <button class="cta-button secondary" onclick="showProductDetail('laptop-pro-business')">
+                            <button class="cta-button" onclick="showProductDetail('laptop-pro-business')">
                                 <i class="fas fa-info-circle"></i> Ver Detalles
-                            </button>
-                            <button class="cta-button" onclick="consultarProducto('Laptop Pro Business', '$45.999')">
-                                <i class="fab fa-whatsapp"></i> Consultar
                             </button>
                         </div>
                     </div>
@@ -124,11 +121,8 @@
                         <div class="producto-price">$28.999</div>
                         <p>Smartphone con cámara de 108MP, pantalla AMOLED 120Hz, 8GB RAM. Fotografía y rendimiento premium.</p>
                         <div class="producto-actions">
-                            <button class="cta-button secondary" onclick="showProductDetail('smartphone-ultra')">
+                            <button class="cta-button" onclick="showProductDetail('smartphone-ultra')">
                                 <i class="fas fa-info-circle"></i> Ver Detalles
-                            </button>
-                            <button class="cta-button" onclick="consultarProducto('Smartphone Ultra', '$28.999')">
-                                <i class="fab fa-whatsapp"></i> Consultar
                             </button>
                         </div>
                     </div>
@@ -143,11 +137,8 @@
                         <div class="producto-price">$18.999</div>
                         <p>Tablet 12.9" con Apple Pencil incluido, ideal para diseñadores y creativos. Pantalla Liquid Retina XDR.</p>
                         <div class="producto-actions">
-                            <button class="cta-button secondary" onclick="showProductDetail('tablet-design-pro')">
+                            <button class="cta-button" onclick="showProductDetail('tablet-design-pro')">
                                 <i class="fas fa-info-circle"></i> Ver Detalles
-                            </button>
-                            <button class="cta-button" onclick="consultarProducto('Tablet Design Pro', '$18.999')">
-                                <i class="fab fa-whatsapp"></i> Consultar
                             </button>
                         </div>
                     </div>
@@ -162,11 +153,8 @@
                         <div class="producto-price">$8.999</div>
                         <p>Auriculares con cancelación de ruido adaptativa, 30 horas de batería. Audio de alta fidelidad.</p>
                         <div class="producto-actions">
-                            <button class="cta-button secondary" onclick="showProductDetail('auriculares-premium')">
+                            <button class="cta-button" onclick="showProductDetail('auriculares-premium')">
                                 <i class="fas fa-info-circle"></i> Ver Detalles
-                            </button>
-                            <button class="cta-button" onclick="consultarProducto('Auriculares Premium', '$8.999')">
-                                <i class="fab fa-whatsapp"></i> Consultar
                             </button>
                         </div>
                     </div>
@@ -181,11 +169,8 @@
                         <div class="producto-price">$12.999</div>
                         <p>Smartwatch con GPS, monitor de salud 24/7, resistente al agua. Tu compañero de entrenamiento.</p>
                         <div class="producto-actions">
-                            <button class="cta-button secondary" onclick="showProductDetail('smartwatch-fitness')">
+                            <button class="cta-button" onclick="showProductDetail('smartwatch-fitness')">
                                 <i class="fas fa-info-circle"></i> Ver Detalles
-                            </button>
-                            <button class="cta-button" onclick="consultarProducto('Smartwatch Fitness', '$12.999')">
-                                <i class="fab fa-whatsapp"></i> Consultar
                             </button>
                         </div>
                     </div>
@@ -200,11 +185,8 @@
                         <div class="producto-price">$89.999</div>
                         <p>PC gaming con RTX 4080, Ryzen 9, 32GB RAM, 1TB SSD. Rendimiento extremo para gaming y diseño.</p>
                         <div class="producto-actions">
-                            <button class="cta-button secondary" onclick="showProductDetail('pc-gaming-ultimate')">
+                            <button class="cta-button" onclick="showProductDetail('pc-gaming-ultimate')">
                                 <i class="fas fa-info-circle"></i> Ver Detalles
-                            </button>
-                            <button class="cta-button" onclick="consultarProducto('PC Gaming Ultimate', '$89.999')">
-                                <i class="fab fa-whatsapp"></i> Consultar
                             </button>
                         </div>
                     </div>
@@ -219,11 +201,8 @@
                         <div class="producto-price">$156.999</div>
                         <p>Cámara mirrorless de 42MP con grabación 4K 60fps, estabilización en 5 ejes y lentes intercambiables. Perfecta para fotografía profesional.</p>
                         <div class="producto-actions">
-                            <button class="cta-button secondary" onclick="showProductDetail('camara-profesional-4k')">
+                            <button class="cta-button" onclick="showProductDetail('camara-profesional-4k')">
                                 <i class="fas fa-info-circle"></i> Ver Detalles
-                            </button>
-                            <button class="cta-button" onclick="consultarProducto('Cámara Profesional 4K', '$156.999')">
-                                <i class="fab fa-whatsapp"></i> Consultar
                             </button>
                         </div>
                     </div>
@@ -238,11 +217,8 @@
                         <div class="producto-price">$245.999</div>
                         <p>Televisor OLED de 65 pulgadas con resolución 4K HDR, Dolby Vision, Smart OS con WiFi 6 y control por voz. Experiencia cinematográfica en casa.</p>
                         <div class="producto-actions">
-                            <button class="cta-button secondary" onclick="showProductDetail('smart-tv-oled-65')">
+                            <button class="cta-button" onclick="showProductDetail('smart-tv-oled-65')">
                                 <i class="fas fa-info-circle"></i> Ver Detalles
-                            </button>
-                            <button class="cta-button" onclick="consultarProducto('Smart TV OLED 65', '$245.999')">
-                                <i class="fab fa-whatsapp"></i> Consultar
                             </button>
                         </div>
                     </div>
@@ -257,11 +233,8 @@
                         <div class="producto-price">$89.999</div>
                         <p>Procesador de última generación con 24 núcleos, frecuencia boost de 5.8GHz. Ideal para gaming extremo, streaming y workstations profesionales.</p>
                         <div class="producto-actions">
-                            <button class="cta-button secondary" onclick="showProductDetail('procesador-intel-i9')">
+                            <button class="cta-button" onclick="showProductDetail('procesador-intel-i9')">
                                 <i class="fas fa-info-circle"></i> Ver Detalles
-                            </button>
-                            <button class="cta-button" onclick="consultarProducto('Procesador Intel i9 13900K', '$89.999')">
-                                <i class="fab fa-whatsapp"></i> Consultar
                             </button>
                         </div>
                     </div>
@@ -647,11 +620,6 @@
             </div>
         </section>
     </main>
-
-    <!-- FLOATING WHATSAPP BUTTON -->
-    <div class="floating-whatsapp" onclick="openDirectWhatsApp()">
-        <i class="fab fa-whatsapp"></i>
-    </div>
 
     <script src="index.js"></script>
 </body>
