Reestructuración completa del proyecto: nueva arquitectura frontend + sistema de imágenes de detalle
- Movido todo el frontend a assets/frontend/ para mejor organización
- Implementado sistema completo de imágenes de detalle (detalles-images.js)
- Corregidas todas las rutas de imágenes para la nueva estructura
- Agregado sistema de galería con 3 imágenes por producto
- Limpieza del proyecto: eliminada carpeta .qodo
- Funcionamiento verificado: imágenes principales y de detalle cargan correctamente
- Archivos de test incluidos para debugging futuro

--- a/assets/frontend/index.html
+++ b/assets/frontend/index.html
@@ -1302,7 +1302,8 @@
         </section>
     </main>
 
-    <script src="assets/productos-images.js"></script>
+    <script src="productos-images.js"></script>
+    <script src="detalles-images.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
